--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://sulav-parajuli.github.io//PersonalPortfolio/",
+  "homepage": "https://sulav-parajuli.github.io/PersonalPortfolio/",
   "name": "personalportfolio",
   "private": true,
   "version": "0.0.0",
