--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -229,6 +229,81 @@
                 "link": "",
                 "icon": "fab fa-github",
                 "text": "Github"
+            },
+            {
+                "link": "https://www.facebook.com/share/p/bxXjDYCNn1Fy1RK8/",
+                "icon": "fas fa-external-link-alt",
+                "text": "View Work"
+            },
+            {
+                "link": "https://www.facebook.com/share/p/H8gRGeDtvKRWmFWp/",
+                "icon": "fas fa-external-link-alt",
+                "text": "View Work"
+            },
+            {
+                "link": "https://www.facebook.com/share/p/ncpSbMepwx2a5XiA/",
+                "icon": "fas fa-external-link-alt",
+                "text": "View Work"
+            },
+            {
+                "link": "https://www.facebook.com/share/p/14Ecihmd1KdjzVWL/",
+                "icon": "fas fa-external-link-alt",
+                "text": "View Work"
+            },
+            {
+                "link": "https://www.facebook.com/share/p/TVWNaWi1WnYJ6d4t/",
+                "icon": "fas fa-external-link-alt",
+                "text": "View Work"
+            },
+            {
+                "link": "https://www.facebook.com/share/p/sYUZkPjbMJLnkNza/",
+                "icon": "fas fa-external-link-alt",
+                "text": "View Work"
+            },
+            {
+                "link": "https://www.facebook.com/share/p/78jRBoR5tx2HKgq9/",
+                "icon": "fas fa-external-link-alt",
+                "text": "View Work"
+            },
+            {
+                "link": "https://www.facebook.com/share/p/kRHFa51QBR9eiUEn/",
+                "icon": "fas fa-external-link-alt",
+                "text": "View Work"
+            },
+            {
+                "link": "https://www.facebook.com/share/p/aAgty27BrpbM1UEW/",
+                "icon": "fas fa-external-link-alt",
+                "text": "View Work"
+            },
+            {
+                "link": "https://www.facebook.com/share/p/5MUBs2KQLtn37aZF/",
+                "icon": "fas fa-external-link-alt",
+                "text": "View Work"
+            },
+            {
+                "link": "https://www.facebook.com/share/p/E8HJ57h3dMc1wChs/",
+                "icon": "fas fa-external-link-alt",
+                "text": "View Work"
+            },
+            {
+                "link": "https://www.facebook.com/share/p/U6LxjrcVSWRkAhfP/",
+                "icon": "fas fa-external-link-alt",
+                "text": "View Work"
+            },
+            {
+                "link": "https://www.facebook.com/share/p/XXA1ZNrkNgkGdS5m/",
+                "icon": "fas fa-external-link-alt",
+                "text": "View Work"
+            },
+            {
+                "link": "https://www.facebook.com/share/p/QmijHQqou93ovMpU/",
+                "icon": "fas fa-external-link-alt",
+                "text": "View Work"
+            },
+            {
+                "link": "https://www.facebook.com/share/p/oHJakCEhC3AwDxKX/",
+                "icon": "fas fa-external-link-alt",
+                "text": "View Work"
             }
         ]
     },
@@ -255,6 +330,36 @@
                 "link": "",
                 "icon": "fab fa-github",
                 "text": "Github"
+            },
+            {
+                "link": "https://www.facebook.com/share/p/MVkb57TMZRySKkHQ/",
+                "icon": "fas fa-external-link-alt",
+                "text": "View Work"
+            },
+            {
+                "link": "https://www.facebook.com/share/p/HCzPDqvRnTo1Z1sH/",
+                "icon": "fas fa-external-link-alt",
+                "text": "View Work"
+            },
+            {
+                "link": "https://www.facebook.com/share/p/BYaiWVVRwLwmC9Ay/",
+                "icon": "fas fa-external-link-alt",
+                "text": "View Work"
+            },
+            {
+                "link": "https://www.facebook.com/share/p/qiWdj8JcYubTvFBF/",
+                "icon": "fas fa-external-link-alt",
+                "text": "View Work"
+            },
+            {
+                "link": "https://www.facebook.com/share/v/PGRAvtTQcb6mazVr/",
+                "icon": "fas fa-external-link-alt",
+                "text": "View Work"
+            },
+            {
+                "link": "https://www.facebook.com/share/v/DQkz6hZUo8oAai5y/",
+                "icon": "fas fa-external-link-alt",
+                "text": "View Work"
             }
         ]
     },
